WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308577
Crash during `ScrollerMac` destruction
https://bugs.webkit.org/show_bug.cgi?id=308577
Summary
Crash during `ScrollerMac` destruction
Charlie Wolfe
Reported
2026-02-24 13:22:22 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Charlie Wolfe
Comment 1
2026-02-24 13:22:23 PST
<
rdar://problem/166098932
>
Charlie Wolfe
Comment 2
2026-02-24 13:24:12 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59358
EWS
Comment 3
2026-02-24 19:36:55 PST
Committed
308177@main
(1eecf74ee36e): <
https://commits.webkit.org/308177@main
> Reviewed commits have been landed. Closing PR #59358 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug