Cherry-pick 1eecf74ee36e. rdar://172777196

Crash during `ScrollerMac` destruction
    https://bugs.webkit.org/show_bug.cgi?id=308577
    rdar://166098932

    Reviewed by Simon Fraser.

    This crash happens with the following sequence:
     1. ScrollerMac is destroyed.
     2. Its RetainPtr<WebScrollerImpDelegateMac> member is released.
     3. The WebScrollbarPartAnimationMac objects on WebScrollerImpDelegateMac are autoreleased, so their
        dealloc can run after ScrollerMac is already destroyed.
     4. dealloc runs and destroys the CheckedPtr<ScrollerMac> ivar, calling ~CheckedPtr() on the
        already-dead ScrollerMac.

    Call [m_scrollerImpDelegate invalidate] in ~ScrollerMac to null out the CheckedPtr references in
    both the delegate and its animations.

    * Source/WebCore/page/scrolling/mac/ScrollerMac.mm:
    (WebCore::ScrollerMac::~ScrollerMac):

    Canonical link: https://commits.webkit.org/308177@main

Identifier: 305413.506@safari-7624-branch